# pratchya

./: README.md  changes.py  pyproject.toml  test.py  test_arr_fp8.py  train.py  train_nq.py
pratchya/: __init__.py  _config.py  _module.py  _utils.py  optimizer.py  preset.py
pratchya/_jax_impl/: README.md  _fn.py  _init_module.py  _key.py  _optimizer.py  _utils.py
pratchya/_kernel/: __init__.py  _cast.py  _fp8.py
pratchya/_kernel/_opt/: __init__.py  _norm.py
pratchya/_nnx_impl/: __init__.py  _model.py  _module.py  _optimizer.py  _utils.py
pratchya/_qualia/: __init__.py  _qarr.py  _qual.py
tokenizer/: __init__.py  chat_template.jinja  tokenizer.py  tokenizer_config.json  train_tokenizer.py
