[project]
name = "pratchya"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flax>=0.12.7",
    "jax",
    "jaxtyping>=0.3.11",
    "optax>=0.2.8",
    "transformers>=5.12.1",
]

[tool.uv.sources]
jax = { git = "https://github.com/jax-ml/jax" }
